# computer-vision

./: .gitignore
1-fnn/: README.md  main.py  requirements.txt
1-fnn/mlp-components/: activation.py  fc.py  gdescent.py  loss.py
1-fnn/mlp_cmp/: activation.py  al.py  fc.py  loss.py  mlp.py
3-3dpcc/: .$3d-ass.drawio.bkp  .$nodes.png.bkp  3d-ass.drawio
3-3dpcc/src/test_pkg/: CMakeLists.txt  package.xml
3-3dpcc/src/test_pkg/src/: dim_filter.cpp  listener.cpp  octree_density.cpp  outlier_removal.cpp  rotate.cpp
